[gd_scene load_steps=3 format=3 uid="uid://fq4dg2mjn4d"]

[ext_resource type="Script" uid="uid://ya3q0vjml76l" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cpy0k5171uwid" path="res://utils/empty_parameter_interface.tscn" id="2_0xm2m"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 960.0
offset_top = 16.0
offset_right = 1264.0
offset_bottom = 656.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AlgorithmSelectionButton" type="OptionButton" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
popup/item_0/text = "SimpleRoomPlacement"
popup/item_0/id = 0
popup/item_1/text = "MysteryDungeon"
popup/item_1/id = 1
popup/item_2/text = "BinarySpacePartition"
popup/item_2/id = 2
popup/item_3/text = "Isaac"
popup/item_3/id = 3
popup/item_4/text = "RandomWalk"
popup/item_4/id = 4

[node name="GenerateButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Generate"

[node name="ParameterInterfaceContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmptyParameterInterface" parent="CanvasLayer/VBoxContainer/ParameterInterfaceContainer" instance=ExtResource("2_0xm2m")]
layout_mode = 2

[node name="ResetCameraButton" type="Button" parent="CanvasLayer"]
offset_left = 1136.0
offset_top = 672.0
offset_right = 1264.0
offset_bottom = 703.0
text = "Reset Camera"

[node name="FloorVisualContainer" type="Node2D" parent="."]
metadata/_edit_lock_ = true
